--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ PORT=5174
 ALLOWED_ORIGINS=http://localhost:5173,https://asjadyousaf.online,https://www.asjadyousaf.online,https://asjadyousafkhan-git-main-asjadyousaf05s-projects.vercel.app,https://asjadyousafkhan-fgh2inx6i-asjadyousaf05s-projects.vercel.app
 
 # Used by the frontend to reach the API
-VITE_API_BASE_URL=http://localhost:5174 , https://asjadyousaf.online/api
+VITE_API_BASE_URL= https://asjadyousaf.online/api
 # For production builds, override the URL above with your deployed API URL
 # (for example: https://your-api-host.example.com)
 
