--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "express": "^5.1.0",
     "lucide-react": "^0.344.0",
     "mongodb": "^7.0.0",
-    "nodemailer": "^7.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^6.5.2",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
